Added new course

--- a/index.html
+++ b/index.html
@@ -108,11 +108,13 @@
         <button onclick="window.open('https://test.io/', '_blank')">TestIO</button>
         <button onclick="window.open('https://www.upwork.com/', '_blank')">Upwork</button>
         <button onclick="window.open('https://www.fiverr.com/', '_blank')">Fiverr</button>
+        <button onclick="window.open('https://www.bugcrowd.com/', '_blank')">Bugcrowd</button>
     </section>
     <div>
         <h1>Cursos / Formación Tester</h1>
     </div>
     <section class="button-grid" style="background-color: black;">
+        <button onclick="window.open('https://apps.cognitiveclass.ai/learning/course/course-v1:BDU+BD0123EN+v1/block-v1:BDU+BD0123EN+v1+type@sequential+block@12eab34ec218468995e4d06566ef4a32/block-v1:BDU+BD0123EN+v1+type@vertical+block@a50a88d51cad45c28c2b96f5d73f670a', '_blank')">Curso IBM Kafka Apache</button>
         <button onclick="window.open('https://github.com/microsoft/AI-For-Beginners', '_blank')">AI for Beginners <br> Repositorio Oficial de Windows</button>
         <button onclick="window.open('https://web.dev/learn/testing/welcome?hl=es-419#coming_soon_automated_testing_in_practice', '_blank')">Mejores Prácticas en Web Testing</button>
         <button onclick="window.open('https://learn.microsoft.com/es-es/training/student-hub/certifications', '_blank')">Microsoft - Certificaciones para estudiantes</button>
